# Rotopp

./: CMakeLists.txt  README.md  README_FULL.md  RotoConfig.rotoInit  resources.qrc
images/: bck.psd
include/: AvdTracker.hpp  ConfigIO.hpp  FrameFlow.hpp  ImgIcon.hpp  RotoActiveContour.hpp  RotoConfig.h.in  RotoCore.hpp  RotoIO.hpp  RotoStatus.hpp  mainWindow.hpp  utils.hpp
include/designZone/: DesignScene.hpp  DesignView.hpp  SniperView.hpp  SpCurve.hpp  SpHook.hpp  SpNode.hpp  SpNodeRotate.hpp  SpPoly.hpp  SpRect.hpp  SpRectRotate.hpp  SpRotator.hpp
include/dialogs/: CreateProjDialog.hpp  ExportProjDialog.hpp  ImageProcDialog.hpp  LoadNukeProjDialog.hpp  LoadProjDialog.hpp  SaveProjDialog.hpp
include/rotoSolver/: baseDefs.hpp  eigenUtils.hpp  fileUtils.hpp  gplvm.hpp  kernel.hpp  planarTrackerSolver.hpp  transformations.hpp
src/: AvdTracker.cpp  ConfigIO.cpp  FrameFlow.cpp  ImgIcon.cpp  RotoActiveContour.cpp  RotoCore.cpp  RotoIO.cpp  RotoStatus.cpp  main.cpp  mainWindow.cpp  utils.cpp
src/designZone/: DesignScene.cpp  DesignView.cpp  SniperView.cpp  SpCurve.cpp  SpHook.cpp  SpNode.cpp  SpNodeRotate.cpp  SpPoly.cpp  SpRect.cpp  SpRectRotate.cpp  SpRotator.cpp
src/dialogs/: CreateProjDialog.cpp  ExportProjDialog.cpp  ImageProcDialog.cpp  LoadNukeProjDialog.cpp  LoadProjDialog.cpp  SaveProjDialog.cpp
src/rotoSolver/: baseDefs.cpp  fileUtils.cpp  kernel.cpp  planarTrackerSolver.cpp  transformations.cpp
